# commerce-commander

./: Cargo.toml
src/: lib.rs  main.rs
src/components/: test.rs
src/core/: action.rs  app.rs  event.rs  init.rs  mod.rs  navigator.rs  tui.rs  ui.rs  update.rs  view.rs
src/state/: app.rs
src/tests/: mod.rs  template_management.rs
src/ui/: init.rs  mod.rs
src/utils/: mod.rs  proj_templating.rs
