[package]
name = "commerce-commander"
version = "0.1.0"
edition = "2021"
authors = ["Luke Berg"]
description = "A command line tool for interacting with and managing the CommerceTools API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tui-textarea = "0.4.0"
ahash = "0.8.6"
git2 = "0.18.1"
serde_json = "1.0.108"
regex = "1.10.2"
